--- a/README.md.template
+++ b/README.md.template
@@ -1,5 +1,4 @@
 Irfan Balghari 
 
-{{ template "daily-table" .Weathers }}
+{{ template "hourly-table" $todayWeather.HourlyWeathers }}
 
-{{ formatTime .UpdatedAt }}
